[project]
name = "ai-game-studio"
version = "0.1.0"
description = "AI-powered asset generation toolchain for indie games"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "gzer0-dev", email = "bayfront.soft@gmail.com" }
]
dependencies = [
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "fal-client>=0.5.0",
    "httpx>=0.27.0",
    "pillow>=12.2.0",
    "rembg>=2.0.75",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]

[project.scripts]
gen-sprite = "ai_game_studio.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_game_studio"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
